fix(twoslash): tag-container shifting copy try buttons

--- a/src/styles/twoslash.css
+++ b/src/styles/twoslash.css
@@ -24,7 +24,7 @@ html[data-theme="dark"] .shiki.light-plus {
 
 .tag-container:has(div > .light-plus),
 html[data-theme="dark"] .tag-container:has(div > .dark-plus) {
-  display: flex;
+  display: block;
 }
 
 .tag-container:has(div > .dark-plus),
